[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [{ name = "phillipuniverse" }]
requires-python = "==3.12.*"
dependencies = [
    "gunicorn>=23.0.0,<24",
    "fastapi>=0.115.12,<0.129",
    "uvicorn[standard]>=0.34.0,<0.35",
    "sentry-sdk>=2.24.1,<3",
    "botocore>=1.37.18,<2",
    "psycopg2>=2.9.10,<3",
    "opentelemetry-instrumentation-fastapi>=0.50b0,<0.51",
    "opentelemetry-instrumentation-botocore>=0.50b0,<0.51",
    "opentelemetry-instrumentation-psycopg2>=0.50b0,<0.51",
    "opentelemetry-instrumentation-httpx>=0.50b0,<0.51",
    "opentelemetry-sdk>=1.9.1,<2",
    "opentelemetry-sdk-extension-aws>=2.1.0,<3",
    "opentelemetry-propagator-jaeger>=1.31.1,<2",
    "opentelemetry-exporter-jaeger-thrift>=1.21.0,<2",
    "starlette-exporter>=0.23.0,<0.24",
    "httpx>=0.28.1,<0.29",
    "SQLAlchemy[asyncio]>=2.0.39,<3",
    "argon2-cffi>=23.1.0,<24",
    "asyncpg>=0.30.0,<0.32",
    "async-lru>=2.0.5,<3",
    "pydantic-settings>=2.8.1,<3",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1,<2",
    "pytest-dotenv>=0.5.2,<0.6",
    "pytest-asyncio>=0.25.3,<0.26",
    "mypy>=1.15.0,<2",
]

[tool.uv]
required-version = ">=0.6.13"
