[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "test"
version = "0.1.0"
description = "test"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [
    {name = "test"}
]
keywords = ["test"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: ASGI",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "aioboto3==15.2.0",
    "aiofiles==25.1.0",
    "aiohttp==3.13.0",
    "bcrypt==5.0.0",
    "httpx==0.28.1",
    "jmespath==1.0.1",
    "langchain-community==0.3.31",
    "langchain-mongodb==0.7.1",
    "langchain-core==0.3.79",
    "langchain-openai==0.3.35",
    "langgraph==0.6.10",
    "motor==3.7.1", # required by quart-session
    "pycountry==24.6.1",
    "pydantic-extra-types==2.10.6",
    "pymongo==4.15.3",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "rcssmin==1.2.2",
    "Quart==0.20.0",
    "quart-assets==0.1.2",
    "quart-compress==0.2.1",
    "quart-cors==0.8.0",
    "quart-session==3.0.0",
    "requests==2.32.5",
    "shortuuid==1.0.13",
    "starlette==0.48.0",
    "uvicorn==0.37.0",
    "xsdata==25.7",
    "thefuzz==0.22.1",
]

[project.urls]
Homepage = "test"
Repository = "test"

[dependency-groups]
dev = [
    "beautifulsoup4==4.14.3",
    "ipykernel==7.1.0",
    "lxml==6.0.2",
    "pandas-ods-reader==1.0.2",
]
test = [
    "playwright==1.58.0",
    "pyflakes==3.4.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-httpx==0.36.0",
    "pytest-playwright==0.7.2",
    "ruff==0.14.14",
    "tox>=4.30.3",
    "tox-gh-actions>=3.3.0",
    "tox-uv>=1.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "tmp*", "logs*", "config*", "uploads*", "generated*", "notebooks*", "node_modules*"]

[tool.ruff]
extend-exclude = [
    "notebooks/*.ipynb"
]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/**/*.py" = ["B011"]  # assert False

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--asyncio-mode=auto",
    "--screenshot=only-on-failure",
    "--tb=short",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "frontend: Frontend component tests",
    "asyncio: Async tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "quart_assets.*",
    "quart_session.*",
    "langchain.*",
    "langgraph.*",
    "playwright.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.tox]
requires = ["tox>=4.20"]
env_list = ["py313", "py312", "frontend", "lint", "unit"]

[tool.tox.gh-actions]
python = """
    3.12: py312, frontend, lint, unit
    3.13: py313, frontend, lint, unit
    """

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "Run test under {base_python}"
dependency_groups = ["test"]
passenv = [
    "MONGODB_URI"
]
allowlist_externals = ["pytest"]
commands = [
    ["pytest", { replace = "posargs", default = ["tests/", "--tb=short", "-vs"], extend = true } ]
]

[tool.tox.env.unit]
description = "Run unit tests"
dependency_groups = ["dev", "test"]
passenv = [
    "MONGODB_URI"
]
allowlist_externals = ["pytest"]
commands = [
    ["pytest", { replace = "posargs", default = ["tests/", "--tb=short", "-m", "not frontend", "-vs"], extend = true } ]
]

[tool.tox.env.frontend]
description = "Run frontend tests using Playwright"
dependency_groups = ["dev", "test"]
passenv = [
    "CLIENT_ID",
    "CLIENT_SECRET", 
    "PLAYWRIGHT_HEADLESS",
    "MONGODB_URI"
]
allowlist_externals = ["playwright", "pytest"]
commands = [
    ["python", "-m", "quart", "--app=app.main", "assets", "clean"],
    ["python", "-m", "quart", "--app=app.main", "assets", "build"],
    ["playwright", "install", "chromium-headless-shell", "--with-deps", "--only-shell"],
    ["pytest", { replace = "posargs", default = ["tests/frontend/", "--tb=short", "-m", "frontend", "-vs"], extend = true } ]
]

[tool.tox.env.format]
allowlist_externals = ["ruff"]
commands = [
    ["ruff", "check", "--fix", { replace = "posargs", default = ["app/", "scripts/", "tests/"], extend = true } ],
    ["ruff", "format", { replace = "posargs", default = ["app/", "scripts/", "tests/"], extend = true } ]
]

[tool.tox.env.lint]
allowlist_externals = ["ruff"]
commands = [
    ["ruff", "check", "--diff", { replace = "posargs", default = ["app/", "scripts/", "tests/"], extend = true } ],
    ["ruff", "format", "--check", { replace = "posargs", default = ["app/", "scripts/", "tests/"], extend = true } ]
]

[tool.uv]
package = false
required-version = '>=0.8.20'
