[project]
dynamic = ["version"]
name = "test-repo"
requires-python = ">=3.13,<3.14"
dependencies = [
    "boto3~=1.42.9",
    "aws-lambda-powertools[tracer]~=3.24.0",
    "pandas~=3.0.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "boto3~=1.42.0",
]

[dependency-groups]
test = [
    "types-boto3~=1.42.9",
    "ruff~=0.14.7",
    "assertpy~=1.1",
    "freezegun~=1.5.5",
    "moto[server]~=5.1.17",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-mock~=3.15.1",
    "pytest-env~=1.2.0",
    "cfn-lint~=1.43.4",
    "typer~=0.21.1",
    "rich~=14.2.0",
    "dictdiffer~=0.9.0",
    "httpx~=0.28.1",
    "python-dotenv~=1.2.1",
]

[tool.uv]
default-groups = ["test"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = ["tests*", "deployment*"]

[tool.setuptools_scm]
root = "../../" # to the .git folder, relative to this pyproject.toml file
fallback_version = "0.0.0" # to make dependabot work

tag_regex = 'test_repo-v(?P<version>\d+(?:\.\d+){0,2}[^\+]+)(?:\+.*)?$'
git_describe_command = "git describe --dirty --tags --long --match 'test_repo-v*'"
