[project]
name = "dependabot-uv-test"
version = "0.1.0"
description = "Test project for Dependabot with uv - httpx as dev dependency"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2,<0.28",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
