[project]
name = "dependabot-uv-test"
version = "0.1.0"
description = "Test project for Dependabot with uv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.2,<0.28",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
